bind sqllite
